# vatlab

./: .gitignore  README.md  package-lock.json  pyproject.toml  vat_notch_explainer.md  vat_simulation_demo.ipynb  visualize_notch_effect.py
.github/workflows/: deploy.yml
analysis/: README.md  README_bunching_analysis.md  README_synthetic_data.md  generate_synthetic_data.py  generate_synthetic_quick.py  generate_synthetic_turnover_data.py  generate_synthetic_turnover_data_tensor.py  plot_example.py  vat_policy_comparison.csv  vat_threshold_analysis.py
data/: README.md  extract_sectors.py  synthetic_firm_generator.py
data/HMRC_VAT_annual_statistics/: vat_population_by_sector.csv  vat_population_by_turnover_band.csv
data/ONS_UK_business_data/: firm_employment.csv  firm_turnover.csv
data/ONS_UK_business_data/raw_data/: ukbusinessworkbook2024.xlsx
demo-dashboard/: README.md  package.json
demo-dashboard/vatlab/: jest.config.js  package.json  start.sh
src/: vat_simulation.py
src/policyengine_vatlab/: __init__.py
tests/: test_vat_simulation.py
vat-dashboard/: next.config.js  package-lock.json  package.json
vat-dashboard/components/: Layout.js  Loading.js  VATAnalysisSidebar.js
vat-dashboard/pages/: vat-analysis.js
vat-dashboard/styles/: globals.css
vatlab/: README.md  jest.config.js  next.config.js  package-lock.json  package.json
vatlab/__tests__/: helper-functions.test.js  vat-analysis.test.js
vatlab/components/: Layout.js  Tabs.js  VATAnalysisSidebar.js  VATChart.js
vatlab/pages/: index.js  vat-analysis.js
vatlab/styles/: globals.css
(+8 files in other folders)
