[project]
name = "policyengine-vatlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vahid Ahmadi", email = "va.vahidahmadi@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
policyengine-vatlab = "policyengine_vatlab:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
